--- a/index.html
+++ b/index.html
@@ -8,6 +8,98 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    dfhgjhdfjg
+    <main class="main"> 
+        <header class="main-box">
+            <h1>Welcome to Our Coworking Center:</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam autem minus laborum laudantium molestias at</br> quam itaque beatae accusantium iste accusamus fugiat, voluptates modi sint numquam neque sed ad ex.
+            </p>
+            <a href="#button" class="links">Read More</a>
+        </header>
+        <section id="main-header">
+            <article id="block-1" class="page">
+                <div class="container-section">
+                    <h2 class="container-title">About Place & Atmosphere for Developers:</h2>
+                    <div id="container-text">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe sint eligendi possimus?Unde
+                            officiismagnam laborum ipsa distinctio odio, vero dolores dicta aliquam aperiam repellendus.
+                            Perferendisofficiis deserunt velit voluptas nobis sequi
+                            animi totam, accusantium, ex eius quia, natus quo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, esse architecto optio totam delectus magnam eveniet maxime perspiciatis praesentium laudantium, ex repellat nostrum reiciendis voluptates eius exercitationem, sed placeat alias!
+                        </p>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <article class="flexParents outBlock"> 
+            <div class="backgroundCard flexContainer">
+                <div class="backgroundard1">
+                    <div class="card1"></div> 
+                    <h3>Work Enviroment:</h3>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa</li> 
+                            <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa</li> 
+                            <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
+                            <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
+                        </ul> 
+                </div>
+                <div class="backgroundard1">
+                    <div class="card2"></div>
+                    <h3>About Launge Zone:</h3>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa</li> 
+                            <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa</li> 
+                            <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
+                            <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
+                        </ul>   
+                </div>
+                <div class="backgroundard1">
+                    <div class="card3"></div>
+                    <h3>Place for Working:</h3>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa</li> 
+                            <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa</li> 
+                            <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
+                            <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
+                        </ul> 
+                </div>
+            </div>           
+        </article>
+        <aside>
+            <div class="footerOne"> 
+                <h4>About Our Events:</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam asperiores temporibus fugit consectetur officia, voluptatem exercitationem expedita eligendi earum voluptas nostrum qui minima! Quos, ut ipsum officia consequuntur repudiandae nulla, consectetur odio quis quas voluptatum sint provident ab! Doloremque, tempore!</p>
+            </div>
+        </aside>
+        <footer>
+            <div class="undeground">
+                <div class="podval left">
+                    <h5>Contact Us:</h5>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, suscipit. Rerum ducimus a quod, ut et
+                        voluptas obcaecati unde fuga.
+                    </p></br>
+                    <p class="email">info@company.com</p>
+                </div>
+                <div class="podval right">
+                    <h5>About Our Company:</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti, quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut suscipit amet temporibus quo?</p>
+                </div>
+            </div>
+        </footer>
+        <footer>
+            <div class="contacts">
+                <div class="group">
+                    <p>Coworking center in style cyberpunk 2077.</p>
+                </div>
+                <div class="group">
+                    <p>Welcome to our company!</p>
+                </div>
+            </div>
+        </footer>
+    </main>
 </body>
 </html>
