--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam autem minus laborum laudantium molestias at</br> quam itaque beatae accusantium iste accusamus fugiat, voluptates modi sint numquam neque sed ad ex.
             </p>
-            <a href="#button" class="links">Read More</a>
+            <a href="https://www.google.com/" class="links">Read More</a>
         </header>
         <section id="main-header">
             <article id="block-1" class="page">
@@ -78,15 +78,18 @@
             <div class="undeground">
                 <div class="podval left">
                     <h5>Contact Us:</h5>
-                    <p>
+                        <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, suscipit. Rerum ducimus a quod, ut et
                         voluptas obcaecati unde fuga.
-                    </p></br>
-                    <p class="email">info@company.com</p>
+                        </p></br>
+                        <p class="email">info@company.com</p>
                 </div>
                 <div class="podval right">
                     <h5>About Our Company:</h5>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti, quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut suscipit amet temporibus quo?</p>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti, quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut suscipit amet temporibus quo?
+
+                        </p>
                 </div>
             </div>
         </footer>
