--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <main class="main"> 
+    <div class="main"> 
         <header class="main-box">
             <h1>Welcome to Our Coworking Center:</h1>
             <p>
@@ -34,7 +34,7 @@
         <article class="flexParents outBlock"> 
             <div class="backgroundCard flexContainer">
                 <div class="backgroundard1">
-                    <div class="card1"></div> 
+                    <div class="card1"><img src="./images/place4work.jpg" alt="Place4work" class="cardimg1"></div> 
                     <h3>Work Enviroment:</h3>
                         <ul>
                             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa</li> 
@@ -44,8 +44,8 @@
                             <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
                         </ul> 
                 </div>
-                <div class="backgroundard1">
-                    <div class="card2"></div>
+                <div class="backgroundard2">
+                    <div class="card2"><img src="./images/launge.jpg" alt="Launge" class="cardimg2"></div>
                     <h3>About Launge Zone:</h3>
                         <ul>
                             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa</li> 
@@ -55,8 +55,8 @@
                             <li>neque quo eum et quasi velit voluptatum cum maiores exercitationem.</li>
                         </ul>   
                 </div>
-                <div class="backgroundard1">
-                    <div class="card3"></div>
+                <div class="backgroundard3">
+                    <div class="card3"><img src="./images/zona.jpg" alt="zona" class="cardimg3"></div>
                     <h3>Place for Working:</h3>
                         <ul>
                             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa</li> 
@@ -68,41 +68,38 @@
                 </div>
             </div>           
         </article>
-        <aside>
+        <footer>
             <div class="footerOne"> 
                 <h4>About Our Events:</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam asperiores temporibus fugit consectetur officia, voluptatem exercitationem expedita eligendi earum voluptas nostrum qui minima! Quos, ut ipsum officia consequuntur repudiandae nulla, consectetur odio quis quas voluptatum sint provident ab! Doloremque, tempore!</p>
             </div>
-        </aside>
-        <footer>
-            <div class="undeground">
+        </footer>
+        <footer class="undeground">
                 <div class="podval left">
-                    <h5>Contact Us:</h5>
+                    <h1>Contact Us:</h1>
                         <p>
+                        </br>    
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, suscipit. Rerum ducimus a quod, ut et
                         voluptas obcaecati unde fuga.
                         </p></br>
                         <p class="email">info@company.com</p>
                 </div>
                 <div class="podval right">
-                    <h5>About Our Company:</h5>
+                    <h1>About Our Company:</h1>
                         <p>
+                            </br> 
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio earum porro deserunt, deleniti, quae facere repudiandae, officiis est exercitationem nobis iusto doloremque! Soluta excepturi in aut suscipit amet temporibus quo?
-
                         </p>
                 </div>
-            </div>
         </footer>
-        <footer>
-            <div class="contacts">
+        <footer class="contacts">
                 <div class="group">
                     <p>Coworking center in style cyberpunk 2077.</p>
                 </div>
                 <div class="group">
                     <p>Welcome to our company!</p>
                 </div>
-            </div>
         </footer>
-    </main>
+    </div>
 </body>
 </html>
